# soapbar

./: .gitignore  CHANGELOG.md  NOTICE  README.md  SECURITY.md  STABILITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  coverage-comment.yml  live.yml  pr.yml  push.yml  release.yml
examples/: README.md  calculator_client.py  calculator_fastapi.py  calculator_flask.py  interop_zeep_client.py
examples/01_calculator/: client.py  client_zeep.py  server_fastapi.py  server_flask.py
examples/02_soap12/: client.py  server.py
examples/03_wsdl_access_control/: server.py
examples/04_ws_security_signing/: sign_and_verify.py
examples/05_ws_addressing/: client.py  server.py
examples/06_username_token_auth/: client.py  server.py
examples/07_mtom_attachments/: build_and_parse.py
examples/08_binding_styles/: compare_styles.py
examples/09_async_client/: client_async.py  server.py
examples/10_complex_types/: client.py  server.py
examples/11_one_way_and_json/: client.py  server.py
examples/12_schema_validation/: client.py  server.py
examples/13_advanced_client/: custom_transport.py  from_file_client.py  manual_client.py
examples/14_security_replay_protection/: replay_demo.py
examples/15_xml_encryption/: encrypt_and_decrypt.py
examples/16_introspection/: inspect_envelope.py  inspect_wsdl.py
examples/17_vies/: vies_demo.py
examples/18_witsml/: witsml_demo.py
examples/19_nfe/: nfe_demo.py
examples/20_mef/: mef_demo.py
examples/21_ana/: ana_demo.py
scripts/: live.sh
src/soapbar/: __init__.py
src/soapbar/client/: __init__.py  client.py  transport.py
src/soapbar/contrib/: __init__.py  ana.py  nfe.py  vies.py  witsml.py
src/soapbar/core/: __init__.py  binding.py  envelope.py  exceptions.py  fault.py  mtom.py  namespaces.py  types.py  wssecurity.py  xml.py
src/soapbar/core/wsdl/: __init__.py  builder.py  parser.py
src/soapbar/server/: __init__.py  _compression.py  application.py  asgi.py  service.py  wsgi.py
tests/: test_contrib_ana.py  test_contrib_nfe.py  test_contrib_vies.py  test_contrib_witsml.py  test_coverage_margin.py  test_doc_literal_bare.py  test_examples.py  test_exception_hierarchy.py  test_id_signing.py  test_interop.py  test_interop_spyne.py  test_public_api.py  test_real_wsdls.py  test_soapbar.py  test_transport_cookies.py  test_transport_mtls.py  test_transport_scheme_guard.py  test_wsdl_namespace.py
tests/audit/: __init__.py  test_compliance.py  test_performance.py  test_security.py
tests/wsdl_samples/: global_weather.wsdl  hello_world.wsdl
tests/wsdl_samples/circular_schema/: a.xsd  b.xsd  circular.wsdl
tests/wsdl_samples/multi_schema/: common.xsd  crm.wsdl  types.xsd
