[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soapbar"
version = "0.4.2"
description = "A SOAP framework for Python — client, server, and WSDL handling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["lxml>=5.0"]
license     = {text = "MIT"}
authors     = [{name = "Hitoshi Yamamoto"}]
keywords    = ["soap", "wsdl", "web-services", "xml", "rpc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/hitoshyamamoto/soapbar"
Issues     = "https://github.com/hitoshyamamoto/soapbar/issues"

[project.optional-dependencies]
core     = []
server   = []
client   = ["httpx>=0.27"]
security = ["signxml>=3.0", "cryptography>=41.0"]
all      = ["httpx>=0.27", "signxml>=3.0", "cryptography>=41.0"]

[dependency-groups]
dev  = ["pytest>=8", "pytest-asyncio>=0.21", "pytest-cov>=5.0", "coverage[toml]", "zeep>=4.0", "httpx>=0.27", "signxml>=3.0", "cryptography>=41.0"]
lint = ["ruff"]
type = ["mypy", "types-lxml", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
soapbar = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","W","I","N","UP","B","SIM","S","RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S110"]
"tests/test_soapbar.py" = ["E402"]

[tool.mypy]
strict           = true
python_version   = "3.12"
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=soapbar --cov-report=term-missing -q"

[tool.coverage.run]
source  = ["soapbar"]
branch  = true

[tool.coverage.report]
show_missing = true
fail_under   = 93
