[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soapbar"
version = "0.14.1"
description = "A SOAP library for Python — client, server, and WSDL handling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["lxml>=5.0"]
license     = {text = "Apache-2.0"}
authors     = [{name = "Hitoshi Yamamoto", email = "60470969+hitoshyamamoto@users.noreply.github.com"}]
keywords    = ["soap", "wsdl", "web-services", "xml", "rpc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/hitoshyamamoto/soapbar"
Issues     = "https://github.com/hitoshyamamoto/soapbar/issues"

[project.optional-dependencies]
core     = []
server   = []
client   = ["httpx>=0.27"]
security = ["signxml>=3.0", "cryptography>=41.0"]
vies     = ["httpx>=0.27"]
witsml   = ["httpx>=0.27"]
ana      = ["httpx>=0.27"]
nfe      = ["httpx>=0.27", "signxml>=3.0", "cryptography>=41.0"]
all      = ["httpx>=0.27", "signxml>=3.0", "cryptography>=41.0"]

[dependency-groups]
dev            = ["pytest>=8", "pytest-asyncio>=0.21", "pytest-cov>=5.0", "coverage[toml]", "zeep>=4.0", "spyne>=2.14", "httpx>=0.27", "signxml>=3.0", "cryptography>=41.0"]
lint           = ["ruff"]
type           = ["mypy", "types-lxml", "httpx>=0.27"]
crypto-interop = ["xmlsec>=1.3"]
examples       = ["fastapi", "uvicorn", "flask"]   # HTTP frameworks the examples/ servers run on

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
soapbar = ["py.typed"]
"soapbar.contrib" = ["_wsdl/*.wsdl"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","W","I","N","UP","B","SIM","S","RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S110"]
"tests/test_soapbar.py" = ["E402"]
# The example smoke harness runs our own scripts (S603) and fetches localhost
# WSDLs over http (S310) — both are intentional in a controlled test.
"tests/test_examples.py" = ["S310", "S603"]

[tool.mypy]
strict           = true
python_version   = "3.10"
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# `live` tests reach a real external service or need credentials; they are
# deselected by default so the suite stays green offline. Run them explicitly
# with `pytest -m live`. Offline tests (including `integration`) always run.
addopts = "--cov=soapbar --cov-report=term-missing -q -m 'not live'"
markers = [
    "integration: real-world WSDL parsing tests (offline; vendored samples)",
    "live: requires a live external service or credentials; deselected by default",
]

[tool.coverage.run]
source         = ["soapbar"]
branch         = true
relative_files = true   # required by python-coverage-comment-action so paths resolve across jobs

[tool.coverage.report]
show_missing = true
fail_under   = 93
